--- a/src/component/sidebar/style.module.less
+++ b/src/component/sidebar/style.module.less
@@ -2,4 +2,24 @@
   :global(.ant-tree) {
     background-color: transparent;
   }
+
+  display: flex;
+  flex-direction: column;
+}
+
+.paneHeader {
+  height: 22px;
+  line-height: 22px;
+  font-size: 11px;
+
+  color: #cccccc;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  padding-left: 20px;
+}
+
+.fullContentMenu {
+  display: block;
+  flex: 1;
 }
