--- a/src/component/tabs/style.module.less
+++ b/src/component/tabs/style.module.less
@@ -4,16 +4,16 @@
   background-color: rgb(37, 37, 38);
 
   display: flex;
+  cursor: pointer;
 
   .item {
     display: flex;
-
-    cursor: pointer;
-
     border-right: 1px solid rgb(37, 37, 38);
     background-color: rgb(45, 45, 45);
     color: rgba(255, 255, 255, 0.5);
     padding-left: 10px;
+
+    font-size: 14px;
 
     height: 35px;
     box-sizing: border-box;
@@ -21,6 +21,7 @@
 
     .icon {
       padding-right: 6px;
+      font-size: 20px;
     }
 
     .close {
@@ -29,6 +30,25 @@
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    :global(.codicon) {
+      display: none;
+      font-size: 16px;
+    }
+
+    &:hover :global(.codicon) {
+      display: inline-block;
+    }
+
+    &:hover :global(.codicon):hover {
+      border-radius: 5px;
+      background-color: rgba(90, 93, 94, 0.31);
+    }
+
+    &.curent {
+      color: #fff;
+      background-color: #1e1e1e;
     }
   }
 }
