feat: fs tree part 1

--- a/src/component/context-menu/style.module.less
+++ b/src/component/context-menu/style.module.less
@@ -1,13 +1,13 @@
 .ContextMenuContent {
   min-width: 220px;
-  overflow: hidden;
   padding: 5px;
 
-  outline: rgb(69, 69, 69) solid 1px;
+  overflow: hidden;
+  outline: 1px solid #454545 !important;
   border-radius: 5px;
-  color: #fff;
-  background-color: #3c3c3c;
-  box-shadow: rgb(0 0 0 / 36%) 0px 2px 8px;
+  color: #cccccc;
+  background-color: #252526;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.36);
 }
 
 .ContextMenuItem {
